feat : add find user info, edit photo profile

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "yamljs": "^0.3.0"
+    "yamljs": "^0.3.0",
+    "zod": "^3.24.4"
   }
 }
